{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 14,
  "lineage": "5fd27e73-0ee2-54c5-730c-dd01af33fdd5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ottman_keypair",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2e7efb4257c0907",
            "arn": "arn:aws:ec2:ca-central-1:922287126541:instance/i-0eeecf8a33833b7d6",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eeecf8a33833b7d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ottman_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d315a32c74961875",
            "private_dns": "ip-172-31-5-63.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.5.63",
            "public_dns": "ec2-3-96-54-160.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.54.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-025a89771a266c8d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-sg-terraform-efrei"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09937cf66219949d3",
            "tags": {
              "Name": "test-ec2-terraform"
            },
            "tags_all": {
              "Name": "test-ec2-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0666898077303e4dd"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:922287126541:internet-gateway/igw-0a639ac4757b9f62a",
            "id": "igw-0a639ac4757b9f62a",
            "owner_id": "922287126541",
            "tags": {
              "Name": "igw-main"
            },
            "tags_all": {
              "Name": "igw-main"
            },
            "vpc_id": "vpc-088dec75f7291730a"
          },
          "dependencies": [
            "aws_vpc.vpc_efrei"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ipaddr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:922287126541:network-interface/eni-073fc59a1c00c6f16",
            "id": "eni-073fc59a1c00c6f16",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:53:b4:57:20:0e",
            "owner_id": "922287126541",
            "private_ip": "172.16.0.100",
            "private_ip_list": [
              "172.16.0.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.0.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04a38f4295ccf71d1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e23ebe66ca4add88"
          },
          "dependencies": [
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_efrei"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:922287126541:route-table/rtb-0d1636cfa6ce86570",
            "id": "rtb-0d1636cfa6ce86570",
            "owner_id": "922287126541",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a639ac4757b9f62a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "table_pub"
            },
            "tags_all": {
              "Name": "table_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-088dec75f7291730a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-main",
            "aws_vpc.vpc_efrei"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fb55ca438b17fa0",
            "route_table_id": "rtb-0d1636cfa6ce86570",
            "subnet_id": "subnet-0e23ebe66ca4add88"
          },
          "dependencies": [
            "aws_internet_gateway.igw-main",
            "aws_route_table.route-main",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_efrei"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:922287126541:security-group/sg-0666898077303e4dd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0666898077303e4dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg-terraform-efrei",
            "name_prefix": "",
            "owner_id": "922287126541",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d72cd460ee94fba0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:922287126541:subnet/subnet-09b89cbe949a50d46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b89cbe949a50d46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922287126541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_private"
            },
            "tags_all": {
              "Name": "subnet_private"
            },
            "vpc_id": "vpc-088dec75f7291730a"
          },
          "dependencies": [
            "aws_vpc.vpc_efrei"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:922287126541:subnet/subnet-0e23ebe66ca4add88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e23ebe66ca4add88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922287126541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_public"
            },
            "tags_all": {
              "Name": "subnet_public"
            },
            "vpc_id": "vpc-088dec75f7291730a"
          },
          "dependencies": [
            "aws_vpc.vpc_efrei"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_efrei",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:922287126541:vpc/vpc-088dec75f7291730a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ed9bea562db39a8d",
            "default_route_table_id": "rtb-06768f47edfcb908f",
            "default_security_group_id": "sg-04a38f4295ccf71d1",
            "dhcp_options_id": "dopt-03f54d76c51bd2ef9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-088dec75f7291730a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06768f47edfcb908f",
            "owner_id": "922287126541",
            "tags": {
              "Name": "vpc_efrei"
            },
            "tags_all": {
              "Name": "vpc_efrei"
            }
          }
        }
      ]
    }
  ]
}